Revision history for Perl extension WWW::Mechanize

1.17_01 Thu Jan 12 14:50:07 CST 2006
        [FIXES]
        * Fixed some failures in tests.  Non-existent URLs now have a
          "." postpended to them, so if someone's got a search domain
          with a wildcard (i.e. ignore.us) it'll ignore that.  Also,
          Google's second link is now a https:// link, which some Mechs
          can't handle.  Added a 'url_regex' which now makes it look at
          the second non-https link.  Thanks to Pete Krawczyk.

        * Makefile.PL lied when it referred to the --skiplive switch,
          which is really the --nolive switch.

1.16    Fri Oct 28 17:34:20 CDT 2005
        [ENHANCEMENTS]
        * Sped up Mech significantly (~20% in some cases).  Images and
          links are extracted from the HTML, and objects are created,
          only when they're actually needed.  This will be a speedup for
          pages where you're only following links, or vice versa.

        [THINGS THAT MAY BREAK YOUR CODE]
        * If you've been relying on the $mech->{images} and $mech->{links}
          fields being populated so that you can bypass the $mech->images()
          and $mech->links() accessors, your code will break.  That's OK,
          because you should have been using the accessors all along.

1.14    Tue Aug 30 17:17:40 CDT 2005
        [DOCUMENTATION]
        * Added lots of new FAQs.  Thanks to Peter Stevens.

        [INTERNALS]
        * Now requires Test::LongString.  That's not too odious.

        [FIXES]
        * Tests now pass with the shuffling around that Google did.

1.13_01 Tue Apr 12 14:11:18 CDT 2005
        [ENHANCEMENTS]
        * Now dies if you call submit_form() with a non-existing
          form_number or form_name.  Before, it would just warn.

        [DOCUMENTATION]
        * Added an example of using credentials() in the cookbook.

1.12    Thu Feb 24 23:38:44 CST 2005
        [FIXES]